# CollectOnDjango

./: Makefile  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  urls.py  views.py
main/dao/: banknote_dao.py  base_dao.py  coin_dao.py  collection_dao.py  country_dao.py  material_dao.py  state_dao.py  theme_dao.py  type_of_edition_dao.py
main/forms/: add_to_collection_form.py  banknote_form.py  choices_forms.py  coin_form.py  collection_form.py
main/models/: banknote.py  banknote_model.py  base.py  choice_models.py  choices.py  coin.py  coin_model.py  collection_model.py  slug_generator.py
main/services/: banknote_service.py  base_service.py  coin_service.py  collection_service.py  country_service.py  material_service.py  state_service.py  theme_service.py  type_of_edition_service.py
main/tests/: conftest.py  test_banknote_controller.py  test_base_controller.py  test_coin_add_controller.py  test_integration.py
main/views/: banknote_views.py  coin_views.py
src/: settings.py  urls.py
static/css/: styles.css
static/js/: scripts.js
templates/: about.html  base.html  index.html
templates/admin/: base_site.html
templates/banknotes/: add_to_collection_list.html  create_banknote.html  detail.html  detail_banknote.html  list.html  list_banknotes.html  new_banknotes.html  plan_banknotes.html  update_banknote.html
templates/choices/: create_form.html
templates/coins/: add_to_collection_list.html  create_coin.html  detail.html  detail_coin.html  list.html  list_coins.html  new_coins.html  update_coin.html
templates/collections/: add_to_collection_form.html  create_collection.html  detail_collections.html  list_collections.html  update_collection.html
templates/countries/: countries_list.html
templates/include/: breadcrumbs.html  filter.html  navbar.html  pagination.html
(+26 files in other folders)
